--- a/sablona-obhaj.tex
+++ b/sablona-obhaj.tex
@@ -87,7 +87,7 @@
 % 1. snímek s cíli (zadaním) práce
 \begin{frame} 
 	% nadpis snímku
-	\frametitle{Cíle práce}
+	\frametitle{Ciele práce}
 	\begin{itemize}
 			\item Naštudovať problematiku systému DAS
 			\item Popísať výstúpný formát - HDF5 
@@ -198,6 +198,19 @@
         \label{fig:prototypesvelte}
     \end{figure}
 \end{frame}
+
+
+\begin{frame}{Frame Title}
+    \frametitle{Aplikácia }
+    \begin{figure}
+        \centering
+        \includegraphics[width=0.8\linewidth]{obrazky/svelte_prototype.png}
+        \caption{Prototype of DAS visualization application}
+        \label{fig:prototypesvelte}
+    \end{figure}
+\end{frame}
+
+
 
 % %%%%%%%%%%%%%
 % \begin{frame} 
