--- a/text/uvod.tex
+++ b/text/uvod.tex
@@ -2,12 +2,17 @@
 \phantomsection
 \addcontentsline{toc}{chapter}{Introduction}
 
-This work explains the topic of \acs{das} (\acl{das}), which uses optical fiber as a sensor array. Light pulses are sent from the light source through the fiber. The light is reflected and scattered on imperfections in the fiber and is reflected back to the light source where its properties are measured like changes in frequency and phase. If there is a strain on the fiber or the fiber is subjected to vibrations of any type, it is possible to interpret them as an audio signal or as some kind of movement. DAS is used for applications such as perimeter monitoring, earthquake detection and localization, traffic monitoring and incident detection and many more. One of the uses is possibility to hear interpret the data as a audio signal and use it as a microphone, which makes optical fiber a big security vulnerability. Especially dangerous is the fact that the attackers do not need access to the server room or the devices themselves, but can connect to the fiber anywhere. There is also the issue of detecting these kinds of attacks because DAS has no impact on existing communication on the fiber.
+With the discovery of laser diodes and optical fibers, the data transmission lines increased the throughput drastically. It enabled fast and reliable communication between data centers and later into our homes. Optical reflectometry enabled to study the inner structure of the fiber itself, the joints, cracks, and imperfections in the fiber. Further research discovered that optical fibers can also be used as sensors. Analyzing the signal coming back from the fiber using optical reflectometry to measure different external properties. And further, by clever timing, it is possible to measure these properties in multiple places along the wire, thus creating distributed sensing.
 
-The main goal of this work is to implement an application that takes the data in HDF5 file format and converts it to WAV audio file format. The second goal is to design an application for displaying the data in an waterfall graph. The design includes study of existing technology and the study of technology capable of displaying the data in real time.
+The work explains the topic of \acs{das} (\acl{das}), which uses optical fiber as a sensor array. Light pulses are sent from the light source through the fiber. The light is reflected and scattered on imperfections in the fiber and is reflected back to the light source, where its properties are measured, like changes in frequency and phase. If there is a strain on the fiber or the fiber is subjected to vibrations of any type, it is possible to interpret them as an audio signal or some movement. DAS is used for applications such as perimeter monitoring, earthquake detection and localization, traffic monitoring and incident detection, and many more. One of the uses is the possibility to hear, interpret the data as an audio signal, and use it as a microphone, which makes optical fiber a big security vulnerability. Especially dangerous is that the attackers do not need access to the server room or the devices but can connect to the fiber anywhere. There is also the issue of detecting these kinds of attacks because DAS does not impact existing communication on the fiber.
+
+The main goal of this work is to implement an application that takes the data in HDF5 file format and converts it to WAV audio file format. The second goal is to design an application for displaying the data in a waterfall graph. The design includes studying existing technology and technology capable of displaying the data in real-time.
 
 
-The first chapter explains how the DAS system works, methods of measuring the strain on the fiber. Important part is also study of the HDF5 file format and specially the output of the DAS system. The second chapter explains the implementation of HDF5 to WAV converter. Mainly the contents of the DAS output file and the data processing involved. The last chapter covers the software design of the waterfall graph visualization, all the requirements and the final solution.
+The first chapter explains fiber optic sensing in general and introduces different light scattering effects, like Rayleigh and Raman scattering. It also explains the principles in the field of optical reflectometry and explains how the DAS system works, and the methods for measuring the strain on the fiber. An important part is studying the HDF5 file format and especially the output of the DAS system. The second chapter explains the software design of the data visualization application and the important technologies that make it - WebSockets, Svelte framework, and HTML rendering options using Canvas and SVG graphics. The last chapter covers the implementation. It focuses on the most interesting parts of implementing client-server communication, Svelte components, data processing, and data visualization.
+% and software design of the waterfall graph visualization, all the requirements, and the final solution.
+
+% format and   the implementation  of HDF5 to WAV converter. Mainly the contents of the DAS output file and the data processing involved. 
 
 
 
