--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -4,55 +4,39 @@
 \addcontentsline{toc}{chapter}{\listofabbrevname}
 
 \begin{acronym}[KolikMista]
-        \acro{adm}
-            [ADM]
-            {Abstract Data Model}
-        \acro{otdr}
-            [$\Phi$-OTDR]
-            {Phase-Sensitive Optical Time Domain Reflectometry}
-        \acro{das}
-            [DAS]
-            {Distributed Acoustic Sensing}
-
-        \acro{dss}
-            [DSS]
-            {Distributed Strain Sensing}
-
-        \acro{dts}
-            [DTS]
-            {Distributed Temperature Sensing}
-        \acro{dvs}
-            [DVS]
-            {Distributed Vibration Sensing}
-        % \acro{}
-        %     []
-        %     {Distributed  Sensing}
-        % \acro{}
-        %     []
-        %     {Distributed  Sensing}
-   
-        \acro{generalotdr}
-            [OTDR]
-            {Optic Time Domain Reflectometry}
-        \acro{fft}
-            [FFT]
-            {Fast Fourier Transformation}
-	   \acro{hdf}
-            [HDF5]
-            {Hierarchical Data Format v5}
-        \acro{ofdr}
-            [OFDR]
-            {Optic Frequency Domain Reflectometry}
-        \acro{sps}
-            [SPS]
-            {samples per second}
-
-        \acro{svg}
-            [SVG]
-            {Scalable Vector Graphics}
-        \acro{dthree}[D3.js]{Data-Driven Documents}
-        \acro{dom}{DOM}{Document Object Model}
-        \acro{tcp}{TCP}{Transmission Control Protocol}
+        % \acro{}[]{}
+        \acro{adm}[ADM]{Abstract Data Model}
+        \acro{api}[API]{Application Programming Interface}
+        \acro{botdr}[BOTDR]{Brillouin Optical Time Domain Reflectometry}
+        \acro{botda}[BOTDA]{Brillouin Optical Time Domain Analysis}
+        \acro{dthree}[D3.js]{Data-Driven Documents, a JavaScript framework}
+        \acro{cotdr}[C-OTDR]{Coherent $\Phi$-OTDR}
+        \acro{das}[DAS]{Distributed Acoustic Sensing}
+        \acro{dom}[DOM]{Document Object Model}
+        \acro{dss}[DSS]{Distributed Strain Sensing}
+        \acro{dts}[DTS]{Distributed Temperature Sensing}
+        \acro{dvs}[DVS]{Distributed Vibration Sensing}
+        \acro{dwdm}[DWDM]{Dense Wavelength Division Multiplexer}
+        \acro{edfa}[EDFA]{Erbium-doped Fiber Amplifier}
+        
+        \acro{fft}[FFT]{Fast Fourier Transformation}
+        \acro{hdf}[HDF5]{Hierarchical Data Format v5}
+        \acro{html}[HTML]{HyperText Markup Language}
+        \acro{http}[HTTP]{Hypertext Transfer Protocol}
+        \acro{json}[JSON]{JavaScript Object Notation}
+        \acro{mems}[MEMS]{Microelectromechanical Systems}
+        \acro{ofdr}[OFDR]{Optical Frequency Domain Reflectometry}
+        \acro{otdr}[$\Phi$-OTDR]{Phase-Sensitive Optical Time Domain Reflectometry}
+        \acro{generalotdr}[OTDR]{Optical Time Domain Reflectometry}
+        \acro{pcb}[PCB]{Printed Circuit Board}
+        \acro{pzt}[PZT]{Lead Zirconate Titanate}
+        \acro{rest}[REST]{Representational State Transfer}
+        \acro{sbs}[SBS]{Stimulated Brillouin Scattering}
+        \acro{sps}[SPS]{Samples Per Second}
+        \acro{svg}[SVG]{Scalable Vector Graphics}
+        \acro{tcp}[TCP]{Transmission Control Protocol}
+        \acro{uml}[UML]{Unified Modelling Language}
+        % \acro{xlt}[XLT]{}
 											% rozvinutí zkratky
 	% \acro{zkTemp}		% název
 	% 	[Šířka levého sloupce Seznamu symbolů a zkratek]								% zkratka
