--- a/text/literatura.tex
+++ b/text/literatura.tex
@@ -7,25 +7,29 @@
 
 
 \bibitem{DVSShanFu}
-SHAN, Yuanyuan, Jiayun DONG, Jie ZENG, Siyi FU, Yinsen CAI, Yixin ZHANG, and Xuping ZHANG. A~Broadband Distributed Vibration Sensing System Assisted by a~Distributed Feedback Interferometer. IEEE Photonics Journal [online]. 2018, 10(1), 1-10 [cit. 2023-04-17]. ISSN 1943-0655. Dostupné z: doi:10.1109/JPHOT.2017.2776919
+SHAN, Yuanyuan, Jiayun DONG, Jie ZENG, Siyi FU, Yinsen CAI, Yixin ZHANG, and Xuping ZHANG. A~Broadband Distributed Vibration Sensing System Assisted by a~Distributed Feedback Interferometer. IEEE Photonics Journal [online]. 2018, 10(1), 1-10 [cit. 2023-04-17]. ISSN 1943-0655. Accessible at: doi:10.1109/JPHOT.2017.2776919
 
 \bibitem{perimeterpolsko}
-ZYCZKOWSKI, Marek, Edward M. CARAPEZZA, Mieczyslaw SZUSTAKOWSKI, Norbert PALKA a~Marcin KONDRAT. Fiber optic perimeter protection sensor with intruder localization [online]. In: . 2004-11-30, 71- [cit. 2023-04-18]. Dostupné z: doi:10.1117/12.578186
+ZYCZKOWSKI, Marek, Edward M. CARAPEZZA, Mieczyslaw SZUSTAKOWSKI, Norbert PALKA a~Marcin KONDRAT. Fiber optic perimeter protection sensor with intruder localization [online]. In: . 2004-11-30, 71- [cit. 2023-04-18]. Accessible at: doi:10.1117/12.578186
 
 \bibitem{filka}
 FILKA, Miloslav. Optické přenosy informací pro integrovanou výuku VUT a~VŠB-TUO. Brno: electronic, 20114. ISBN 978-80-214-5064-6.
+
+\bibitem{otdr.advances}
+RAO, Yunjiang, Zinan WANG, Huijuan WU, Zengling RAN and Bing HAN. Recent Advances in Phase-Sensitive Optical Time Domain Reflectometry ($\Phi$-OTDR). Photonic sensors (Berlin) [online]. Singapore: Springer Singapore, 2021, 11(1), 1-30 [cit. 2023-05-05]. ISSN 1674-9251. Accessible at: doi:10.1007/s13320-021-0619-4
+
 
 \bibitem{cabling}
 WOODWARD, Bill, and Andrew OLIVIERO. Cabling The Complete Guide to Copper and Fiber-Optic Networking. 5th edition. Indianapolis, Indiana: John Wiley, 2014. ISBN 978-1-118-80732-3.
 
 \bibitem{scatteringcenterbook}
-WEIK, Martin H. Scattering center. In: WEIK, Martin H. Computer Science and Communications Dictionary [online]. Boston, MA: Springer US, 2001, 2000-11-30, s. 1522-1522 [cit. 2023-04-19]. ISBN 978-0-7923-8425-0. Dostupné z: doi:10.1007/1-4020-0613-6\_16662
+WEIK, Martin H. Scattering center. In: WEIK, Martin H. Computer Science and Communications Dictionary [online]. Boston, MA: Springer US, 2001, 2000-11-30, s. 1522-1522 [cit. 2023-04-19]. ISBN 978-0-7923-8425-0. Accessible at: doi:10.1007/1-4020-0613-6\_16662
 
 \bibitem{sveltedoc}
-Svelte documentation. Documentation [online]. 2023 [cit. 2023-04-20]. Dostupné z: https://svelte.dev/docs
+Svelte documentation. Documentation [online]. 2023 [cit. 2023-04-20]. Accessible at: \(<\)\url{https://svelte.dev/docs}\(>\)
 
 \bibitem{chemsens}
-POSPÍŠILOVÁ, Marie, Gabriela KUNCOVÁ, and~Josef TRÖGL. Fiber-Optic Chemical Sensors and Fiber-Optic Bio-Sensors. Sensors [online]. 2015, 15(10), 25208-25259 [cit. 2023-04-18]. ISSN 1424-8220. Dostupné z: doi:10.3390/s151025208
+POSPÍŠILOVÁ, Marie, Gabriela KUNCOVÁ, and~Josef TRÖGL. Fiber-Optic Chemical Sensors and Fiber-Optic Bio-Sensors. Sensors [online]. 2015, 15(10), 25208-25259 [cit. 2023-04-18]. ISSN 1424-8220. Accessible at: doi:10.3390/s151025208
 
 \bibitem{WangYu2017RDVM}
 
@@ -35,13 +39,29 @@ WANG, Yu, Baoquan JIN, Yuncai WANG, Dong WANG, Xin LIU, Qing BAI: \emph{Real-Tim
 KISLOV, K. V., and V. V. GRAVIROV: \emph{Distributed Acoustic Sensing: A New Tool or a~New Paradigm. Seismic instruments} [online]. Moscow: Pleiades Publishing, 2022, 58(5), 485-508 [cit. 2022-11-22]. ISSN 0747-9239. Accessible at: doi:10.3103/S0747923922050085
 
 \bibitem{hydrophones}
-MATSUMOTO, Hiroyuki, Eiichiro ARAKI, Toshinori KIMURA, et al. Detection of hydroacoustic signals on a fiber-optic submarine cable. Scientific reports [online]. England: Nature Publishing Group, 2021, 11(1), 2797-2797 [cit. 2023-04-22]. ISSN 2045-2322. Dostupné z: doi:10.1038/s41598-021-82093-8
+MATSUMOTO, Hiroyuki, Eiichiro ARAKI, Toshinori KIMURA, et al. Detection of hydroacoustic signals on a fiber-optic submarine cable. Scientific reports [online]. England: Nature Publishing Group, 2021, 11(1), 2797-2797 [cit. 2023-04-22]. ISSN 2045-2322. Accessible at: doi:10.1038/s41598-021-82093-8
 
 \bibitem{dasseismic}
-PARKER, Tom, SHATALIN, Sergey, FARHADIROUSAN Mahmoud: \emph{Distributed Acoustic Sensing – a~new tool for seismic applications}. Earthdoc [online]. [cit. 2022-11-22]. Accessible at \(<\)\url{https://doi.org/10.3997/1365-2397.2013034}\(>\)
+PARKER, Tom, SHATALIN, Sergey, FARHADIROUSAN Mahmoud: \emph{Distributed Acoustic Sensing – a~new tool for seismic applications}. Earthdoc [online]. [cit. 2022-11-22]. Accessible at
+: https://doi.org/10.3997/1365-2397.2013034
 
 \bibitem{bhundred}
 MERKLEIN, Moritz, Irina V. KABAKOVA, Atiyeh ZARIFI, and Benjamin J. EGGLETON. 100 years of Brillouin scattering: Historical and future perspectives. Applied Physics Reviews [online]. 2022, 9(4), 41306 [cit. 2023-04-21]. ISSN 1931-9401. Accessible at: doi:10.1063/5.0095488
+
+\bibitem{distributedrayleigh}
+PALMIERI, Luca and Luca SCHENATO. Distributed Optical Fiber Sensing Based on Rayleigh Scattering. The Open Optics Journal. 2013, 7(1), 104-127. Accessible at: doi:10.2174/1874328501307010104
+
+\bibitem{distributedvibrsensingotdr}
+SHAN, Yuanyuan, Jiayun DONG, Jie ZENG, Siyi FU, Yinsen CAI, Yixin ZHANG and Xuping ZHANG. A Broadband Distributed Vibration Sensing System Assisted by a Distributed Feedback Interferometer. IEEE Photonics Journal [online]. 2018, 10(1), 1-10 [cit. 2023-05-04]. ISSN 1943-0655. Accessible at: doi:10.1109/JPHOT.2017.2776919
+
+\bibitem{comparisonscattering}
+WAIT, P.C, K DE SOUZA and T.P NEWSON. A theoretical comparison of spontaneous Raman and Brillouin based fibre optic distributed temperature sensors. Optics communications [online]. AMSTERDAM: Elsevier B.V, 1997, 144(1), 17-23 [cit. 2023-05-12]. ISSN 0030-4018. Accessible at: doi:10.1016/S0030-4018(97)00482-3
+
+\bibitem{nonlinearoptics}
+BOYD, Robert W and Debbie PRATO. Nonlinear Optics (3rd Edition). San Diego: Elsevier, 2008. ISBN 0123694701. Accessible at: doi:10.1016/B978-0-12-121682-5.X5000-7
+
+\bibitem{raybril}
+AYANA, Lamessa Abebe, Qi CHU, Yulin PEI, Liqiang QIU, Dexin BA and Yongkang DONG. Distributed optical fiber sensing based on the combination of Brillouin and Rayleigh scattering [online]. In: . SPIE, 2021, 118500D-118500D-5 [cit. 2023-05-13]. ISBN 9781510645448. ISSN 0277-786X. Accessible at: doi:10.1117/12.2599257
 
 \bibitem{gabai}
 GABAI, Haniel, and AVISHAY Eyal: \emph{On the sensitivity of distributed acoustic sensing.} Optics letters vol. 41,24 (2016): 5648-5651. [online]. [cit. 2022-11-22] doi:10.1364/OL.41.005648
@@ -75,18 +95,28 @@ OptaSense OS6 Visualization Software Demo. YouTube, uploaded by OptaSense, 22 J
 Melnikov, A., Fette, I.: \emph{The WebSocket Protocol}. RFC Editor. [online] [cit. 2022-08-12]. Accessible at: \(<\)\url{https://doi.org/10.17487/RFC6455}\(>\).
 
 \bibitem{colormap}
-Choosing Colormaps in Matplotlib. Choosing Colormaps in Matplotlib [online]. The Matplotlib development team, c2002–2012 [cit. 2023-04-29]. Dostupné z: https://matplotlib.org/stable/tutorials/colors/colormaps.html
+Choosing Colormaps in Matplotlib. Choosing Colormaps in Matplotlib [online]. The Matplotlib development team, c2002–2012 [cit. 2023-04-29]. Accessible at: \(<\)\url{https://matplotlib.org/stable/tutorials/colors/colormaps.html}\(>\)
 
+\bibitem{accelerometer}
+Os7500 Optical Accelerometer [online]. [cit. 2023-05-05]. Accessible at: \(<\)\url{https://lunainc.com/product/os7500}\(>\)
 
 \bibitem{fog}
-The fiber-optic gyroscope: Herve Lefevre Artec House, 1993, ISBN 0-89006-537-3, pp. 300, £65. Optics and Laser Technology [online]. Elsevier, 1993, 25(6), 406-406 [cit. 2023-04-22]. ISSN 0030-3992. Dostupné z: doi:10.1016/0030-3992(93)90010-D
+The fiber-optic gyroscope: Herve Lefevre Artec House, 1993, ISBN 0-89006-537-3, pp. 300, £65. Optics and Laser Technology [online]. Elsevier, 1993, 25(6), 406-406 [cit. 2023-04-22]. ISSN 0030-3992. Accessible at: doi:10.1016/0030-3992(93)90010-D
 
+\bibitem{usecase}
+What is Use Case Diagram? [online]. 2022 [cit. 2023-05-05]. Accessible at: \(<\)\url{https://www.visual-paradigm.com/guide/uml-unified-modeling-language/what-is-use-case-diagram/}\(>\)
+
+\bibitem{restapi}
+What is a REST API? [online]. IBM, 2023 [cit. 2023-05-06]. Accessible at: \(<\)\url{https://www.ibm.com/topics/rest-apis}\(>\)
+
+\bibitem{restfreecodecamp}
+HUSAR, Alex. How to use REST APIs [online]. Oakland, CA 94607: Free Code Camp, 2023 [cit. 2023-05-06]. Accessible at: \(<\)\url{https://www.freecodecamp.org/news/how-to-use-rest-api/}\(>\)
 
 \bibitem{cors} 
-\emph{Cross-Origin Resource Sharing (CORS)} mozilla.org [cit. 2022-12-08]. Accessible at \(<\)\url{https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS}\(>\).
+\emph{Cross-Origin Resource Sharing (CORS)} mozilla.org [cit. 2022-12-08]. Accessible at: \(<\)\url{https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS}\(>\).
 
 \bibitem{scattering.comparison}
-Illustrative spectra of light scattering in optic fibers. Springer Link [online]: Springer [cit. 2023-04-25]. Dostupné z: https://link.springer.com/article/10.3103/S0747923922050085/figures/6
+Illustrative spectra of light scattering in optic fibers. Springer Link [online]: Springer [cit. 2023-04-25]. Accessible at: \(<\)\url{https://link.springer.com/article/10.3103/S0747923922050085/figures/6}\(>\)
 
 % @misc{rfc6455,
 %     series =    {Request for Comments},
